# parrot

./: .gitignore  README.md  cargo.toml  package-lock.json  package.json
parrot_rs/: Cargo.toml
parrot_rs/src/: config.rs  error.rs  file.rs  lib.rs  models.rs  parsing.rs  repl.rs  state.rs  text.rs  tree.rs
parrot_rs/src/fts/: index.rs  mod.rs  models.rs  tests.rs
parrot_rs/tests/: sexpr_parsing_tests.rs  slynk_parsing_tests.rs
parrot_ui/: index.html  preact-bundle.js  tests.html
parrot_ui/CodeMirror/: build-cm-editor.js  commonlisp.js  package-lock.json  package.json  parrot-cm.bundle.js  rollup.config.js  styles.css
parrot_ui/CodeMirror/cl-lang-mode/: README.md  package-lock.json  package.json
parrot_ui/components/: App.js  ConfigDiagnosticsDialog.js  ConfirmDeleteDirDialog.js  ConfirmDeleteFileDialog.js  DebugOverlay.js  DeleteFileDialog.js  Editor.js  EditorTabs.js  FileFolderTree.js  FoundDefinitionsDialog.js  NewLispFileDialog.js  PackageBrowserPane.js  REPL.js  ReadInputDialog.js  RenameDialog.js  SBCLOutputDialog.js  SearchPane.js  Settings.js  SubdirDialog.js  Test.js  TreeNode.js
parrot_ui/scripts/: backend.js  eventbus.js  notifications.js  paredit.js  tree.js  utils.js
parrot_ui/styles/: style.basics.css  style.colors.css  style.css  style.modal.css  style.notifications.css  style.tree.css  style.vars.css
parrot_ui/xterm/: xterm-fit.js  xterm.css
src-tauri/: Cargo.toml  sly.el  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/slynk/: slynk-loader.lisp  start-slynk.lisp
src-tauri/src/: main.rs
(+19 files in other folders)
